--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc -b",
     "start": "node dist/index.js",
-    "dev": "npm run build && npm run start",
+    "dev": "concurrently \"npm run build && npm run start\" \"npm run dev --prefix ../frontend\"",
     "vercel-build": "npm run build"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "concurrently": "^9.1.2"
   }
 }
