--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc -b",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npm run build && npm run start\" \"npm run dev --prefix ../frontend\"",
+    "dev": "npm run build && npm run start",
     "vercel-build": "npm run build"
   },
   "keywords": [],
