--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,20 @@
 {
   "version": 2,
   "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "src/index.ts" }]
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "src/index.ts",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://secondbrain-ly.vercel.app",
+        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "src/index.ts"
+    }
+  ]
 }
